<resources>
    <string name="app_name">PGF App</string>
    <string name="emailField">email@site.com</string>
    <string name="passwordField">password</string>
    <string name="PGF">PET GEOFENCE</string>
    <string name="title_activity_current_map">CurrentMap</string>
    <string name="APIkey">AIzaSyBFDXgDfvHM2FZaH8EHzG79OrHfnzfmhgo</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="logintxt">Login</string>
    <string name="Next">Next</string>
    <string name="signout">Sign Out</string>
    <string name="montserrat">Montserrat</string>
    <string name="emailtxt">Email</string>
    <string name="pwdtxt">Password</string>
    <string name="contentDescrHamburger">Settings Button</string>
    <string name="title_activity_hub">HubActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="locHist">Location History</string>
    <string name="contentDescrLocHist">Location History</string>
    <string name="location_history">location history</string>
    <string name="utilities_hub">Utilities Hub</string>
    <string name="device_management">Device Management</string>
    <string name="data_usage">Data Usage</string>
    <string name="devices">Devices</string>
    <string name="data_usages">Data Usage</string>
    <string name="settings">settings</string>
    <string name="settingstxt">Settings</string>
    <string name="logouttheheck">Logout</string>
    <string name="logout">Logout</string>
    <string name="temp_times"> 12:05pm-3:45pm</string>
    <string name="monday_april_24th_2024">Monday April 24th 2024 | 2:05pm-3:45pm</string>
    <string name="today">Today</string>
    <string name="Add_Button">Add Button</string>
    <string name="title_activity_bounds">BoundsActivity</string>
    <string name="draw_a_boundary">PLOT 5 POINTS\n TO DRAW YOUR BOUNDARY</string>
    <string name="redo_boundary">Redo Boundary</string>
    <string name="im_done_with_the_boundary">Im Done With the Boundary</string>
    <string name="go_back_to_the_main_page">Go Back To The Main Page</string>
    <string name="testing_coap_stuff_button">testing coap stuff button</string>
    <string name="boundary_info_tab">Boundary Info Tab</string>
    <string name="some_text">some text</string>
    <string name="boundary_1_active_n_boundary_2_inactive_n_boundary_3_inactive">Boundary 1 | Pets | Active\nBoundary 2 | Pets | Inactive \nBoundary 3 | Pets | Inactive</string>
    <string name="boundaries">Boundaries</string>
    <string name="dashed_line">----------------------------</string>
    <string name="title_activity_edit_bounds">EditBoundsActivity</string>
    <string name="test_1">test 1 |</string>
    <string name="list_pets">List Pets</string>
    <string name="bar">|</string>
    <string name="edit_boundary">Edit Boundary</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="boarders">Boarders</string>
    <string name="pets">pets</string>
    <string name="settings_text">Settings</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="privacy_policy_text">Privacy Policy</string>
    <string name="training_guide"> Training Guide </string>
    <string name="how_to_use">How To Use</string>
    <string name="pets_text">Pets</string>
    <string name="borders">Borders</string>
    <string name="pgf_logo">PGF logo</string>
    <string name="create_account">Create Account</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="go_back_to_the_login_page">Go back to the login page</string>
    <string name="sign_in">Sign In</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="confirm_password_txt">confirm password</string>
    <string name="collar">Collar</string>
    <string name="yesterday">Yesterday</string>
    <string name="december_4th_2024">December 4th, 2024</string>
    <string name="december_3rd_2024">December 3rd, 2024</string>
    <string name="title_activity_privacy_policy">PrivacyPolicyActivity</string>
    <string name="action_settings">Settings</string>
    <string name="privacy_policy_text_thing">Privacy Policy</string>
    <string name="title_activity_training_guide">TrainingGuideActivity</string>
    <string name="go_back">go back</string>
    <string name="title_activity_how_to_use">HowToUseActivity</string>
    <string name="how_to_use_text">
        "NAVIGATING THE BOTTOM MENU\n\n"
        "To navigate the bottom menu, you can either swipe or tap the tab you wish to view.\n"
        "\n\n"
        "ADDING A PET TO THE COLLAR:\n\n"
        "To add a pet to the collar, tap the '+' button on the 'Pets' tab on the bottom half of the screen. Then you need to enter the collar's IMEI number in the first field and your pet's name in the second field. Now you can monitor your pets location, provided that the collar is active.\n"
        "\n\n"
        "DELETING A PET FROM THE COLLAR:\n\n"
        "To delete a pet from the collar, tap the button marked with a garbage can found next to the pet's name in the 'Pets' tab\n"
        "\n\n"
        "ADDING A BOUNDARY:\n\n"
        "To add a boundary, tap the '+' button in the Borders tab. You will then be prompted to plot 3 or more points on the map, and a boundary will be drawn based off of those points. If you wish to redo your boundary, you can tap the redo button, located under the check button. You can also drag and drop the positioning of the markers placed. If you wish to go back to the main page, tap the back button located in the top left margin of the screen."
        "In order to save your boundary, you must tap the check button in the upper right margin of the screen. You will then be prompted to give the boundary a name. When you are finished naming your boundary, press OK, and your boundary is saved.\n"
        "\n\n"
        "ACTIVATING A BOUNDARY:\n\n"
        "In order to activate a boundary, you need to toggle the switch matching the boundary you want activated. Please note that you can only have one boundary active at a time.\n"
        "\n\n"
        "DELETING A BOUNDARY:\n\n"
        "In order to delete a boundary, tap the button marked with a garbage can found next to the on/off switch. You will then be prompted to ensure you truly do want to delete the boundary.\n"
        "\n\n"


    </string>
</resources>