<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3A93C3"
    android:fitsSystemWindows="true"
    tools:context=".HubActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="60dp"
            android:background="@null"
            android:contentDescription="@string/go_back_to_the_main_page"
            android:onClick="backToMaps"
            android:src="@drawable/back_button" />

        <TextView
            android:layout_width="343dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="-20dp"
            android:layout_marginTop="0dp"
            android:fontFamily="@font/montserratbold"
            android:text="@string/utilities_hub"
            android:textAlignment="center"
            tools:ignore="RtlHardcoded" />

        <!--Location History-->
        <ImageButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginLeft="-372.5dp"
            android:layout_marginTop="150dp"
            android:backgroundTint="#D1E5F0"
            android:contentDescription="@string/contentDescrLocHist"
            android:onClick="goToLocHist"
            android:src="@drawable/baseline_location_pin_24"
            android:text="@string/location_history"
            tools:ignore="RtlHardcoded" />

        <TextView
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="165dp"
            android:fontFamily="@font/montserratbold"
            android:text="@string/locHist"
            android:textColor="#B31529" />

        <!--Device History-->
        <ImageButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="-350dp"
            android:layout_marginTop="250dp"
            android:backgroundTint="#D1E5F0"
            android:contentDescription="@string/devices"
            android:src="@drawable/baseline_phonelink_24" />

        <TextView
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="265dp"
            android:fontFamily="@font/montserratbold"
            android:text="@string/device_management"
            android:textColor="#B31529" />

        <!--Data Usage-->
        <ImageButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="-350dp"
            android:layout_marginTop="350dp"
            android:backgroundTint="#D1E5F0"
            android:contentDescription="@string/data_usages"
            android:src="@drawable/baseline_cloud_24" />

        <TextView
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="365dp"
            android:fontFamily="@font/montserratbold"
            android:text="@string/data_usage"
            android:textColor="#B31529" />

        <!--Settings-->
        <ImageButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="-350dp"
            android:layout_marginTop="450dp"
            android:backgroundTint="#D1E5F0"
            android:contentDescription="@string/settings"
            android:src="@drawable/baseline_settings_24" />

        <TextView
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="465dp"
            android:fontFamily="@font/montserratbold"
            android:text="@string/settingstxt"
            android:textColor="#B31529" />

        <!--LogOut-->
        <ImageButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="-350dp"
            android:layout_marginTop="550dp"
            android:backgroundTint="#D1E5F0"
            android:contentDescription="@string/logouttheheck"
            android:onClick="logout"
            android:src="@drawable/baseline_logout_24" />

        <TextView
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="565dp"
            android:fontFamily="@font/montserratbold"
            android:text="@string/logout"
            android:textColor="#B31529" />

    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>