<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkest_blue"
    android:layout_gravity="center"
    android:padding="20dp"
    tools:context=".SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/salmon"
            android:layout_marginTop="-10dp"
            android:fontFamily="@font/montserratbold"
            android:text="@string/PGF"
            android:textAlignment="center"
            android:textSize="40sp" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/pgf_logo"
            android:src="@mipmap/logo_launcher_round"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="40sp"
            android:text="@string/create_account"
            android:textColor="@color/salmon"
            android:fontFamily="@font/montserratbold"
            android:textAlignment="center"/>

        <ImageButton
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:onClick="backToLogin"
            android:layout_marginTop="-120dp"
            android:layout_marginStart="-150dp"
            android:backgroundTint="@color/darkest_blue"
            android:contentDescription="@string/go_back_to_the_login_page"
            android:src="@drawable/back_button"/>

        <!--Email Field-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:layout_marginTop="60dp"
            android:textColor="@color/salmon"
            android:text = "@string/emailtxt"
            android:fontFamily="@font/montserratbold"/>

        <EditText
            android:id="@+id/new_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:autofillHints="enter your email address"
            android:background="@drawable/rounded_corner"
            android:fontFamily="@font/montserrat"
            android:hint="@string/emailField"
            android:inputType="textEmailAddress"
            android:padding="18dp"
            android:backgroundTint="@color/lighter_blue"
            android:textColor="@color/Red40"
            android:textColorHint="@color/Red40"
            android:textSize="20sp" />

        <!--If we are using mobile 2FA, then add a field for their phone number-->

        <!--Initial Password Field-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:layout_marginTop="20dp"
            android:textColor="@color/salmon"
            android:text = "@string/pwdtxt"
            android:fontFamily="@font/montserratbold"/>

        <EditText
            android:id="@+id/txtpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:autofillHints="enter your email address"
            android:background="@drawable/rounded_corner"
            android:fontFamily="@font/montserrat"
            android:hint="@string/passwordField"
            android:inputType="textPassword"
            android:padding="18dp"
            android:backgroundTint="@color/lighter_blue"
            android:textColor="@color/Red40"
            android:textColorHint="@color/Red40"
            android:textSize="20sp" />

        <!--Confirm Password Field-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:layout_marginTop="20dp"
            android:textColor="@color/salmon"
            android:text = "@string/confirm_password"
            android:fontFamily="@font/montserratbold"/>

        <EditText
            android:id="@+id/confirm_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:autofillHints="enter your email address"
            android:background="@drawable/rounded_corner"
            android:fontFamily="@font/montserrat"
            android:hint="@string/confirm_password_txt"
            android:inputType="textPassword"
            android:padding="18dp"
            android:backgroundTint="@color/lighter_blue"
            android:textColor="@color/Red40"
            android:textColorHint="@color/Red40"
            android:textSize="20sp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginTop="30dp"
            android:textColor="@color/Red40"
            android:backgroundTint="@color/light_blue"
            android:onClick="onNextBtn"
            android:fontFamily="@font/montserratbold"
            android:text="@string/Next"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>