<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <!--Default layout_height is match parent-->
    <!-- what we want is 500dp for layout_height-->
    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        tools:context=".MapsActivity"/>


    <!--Settings Button-->
    <!--Sends User To Settings Page-->
    <ImageButton
        android:id="@+id/settings_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@null"
        android:contentDescription="@string/contentDescrHamburger"
        android:onClick="gotoHub"
        android:padding="8dp"
        android:src="@drawable/hamburger" />

    <!--Add Button-->
    <!--Lets User Draw A Boundary-->
    <ImageButton
        android:id="@+id/add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="5dp"
        android:background="@null"
        android:contentDescription="@string/Add_Button"
        android:onClick="gotoDrawBounds"
        android:padding="8dp"
        android:src="@drawable/rectangle_1" />

    <!--Boundary Info Tab-->
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="900dp"
        android:layout_marginTop="450dp"
        android:src="@drawable/rectangle"
        android:contentDescription="@string/boundary_info_tab"
        />

    <!-- Remove this later -->
    <!-- Just some stuff to test out how the UI should look-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/boundaries"
        android:textSize="34sp"
        android:textAlignment="center"
        android:fontFamily="@font/montserratbold"
        android:paddingTop="520dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dashed_line"
        android:textSize="34sp"
        android:textAlignment="center"
        android:fontFamily="@font/montserratbold"
        android:paddingTop="550dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/test_1"
        android:textSize="30sp"
        android:paddingTop="600dp"
        android:layout_marginStart="20dp"
        android:fontFamily="@font/montserratbold"/>

    <Switch
        android:id="@+id/simpleSwitch"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:paddingTop="615dp"
        android:textAlignment="center"
        android:checked="true"
        tools:ignore="UseSwitchCompatOrMaterialXml"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bar"
        android:fontFamily="@font/montserratbold"
        android:textSize="30sp"
        android:paddingTop="600dp"
        android:layout_marginStart="200dp"/>

    <ImageButton
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="@string/list_pets"
        android:layout_marginTop="600dp"
        android:layout_marginStart="230dp"
        android:src="@drawable/baseline_pets_24"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bar"
        android:fontFamily="@font/montserratbold"
        android:textSize="30sp"
        android:paddingTop="600dp"
        android:layout_marginStart="300dp"/>

    <ImageButton
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:onClick="toEditBounds"
        android:contentDescription="@string/list_pets"
        android:layout_marginTop="600dp"
        android:layout_marginStart="330dp"
        android:src="@drawable/edit_button"/>


</RelativeLayout>