<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkest_blue"
    tools:context=".LocationHistory">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="16dp">

        <ImageButton
            android:id="@+id/settings_button"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:background="@null"
            android:contentDescription="@string/contentDescrHamburger"
            android:onClick="backToHubAct"
            android:src="@drawable/back_button"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/salmon"
            android:layout_marginTop="60dp"
            android:layout_marginStart="-70sp"
            android:textSize="50sp"
            android:fontFamily="@font/montserratbold"
            android:text="@string/locHist"
            android:textAlignment="center" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="180dp"
            android:layout_marginStart="-410dp"
            android:textSize="30sp"
            android:background="@drawable/rounded_corner"
            android:backgroundTint="@color/light_blue"
            android:textColor="@color/Red40"
            android:fontFamily="@font/montserratbold"
            android:text="@string/yesterday"
            android:textAlignment="center" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/light_blue"
            android:background="@drawable/rounded_corner"
            android:layout_marginStart="-415dp"
            android:layout_marginTop="250dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/group2" />

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="100dp"
                android:layout_marginTop="120dp"
                android:src="@drawable/happy_trail" />

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="100dp"
                android:layout_marginTop="250dp"
                android:rotationX="@integer/material_motion_duration_medium_1"
                android:src="@drawable/happy_trail" />
        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="710dp"
            android:layout_marginStart="-410dp"
            android:textSize="30sp"
            android:background="@drawable/rounded_corner"
            android:backgroundTint="@color/light_blue"
            android:textColor="@color/Red40"
            android:fontFamily="@font/montserratbold"
            android:text="@string/december_4th_2024"
            android:textAlignment="center" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="760dp"
            android:layout_marginStart="-410dp"
            android:textSize="30sp"
            android:background="@drawable/rounded_corner"
            android:backgroundTint="@color/light_blue"
            android:textColor="@color/Red40"
            android:fontFamily="@font/montserratbold"
            android:text="@string/december_3rd_2024"
            android:textAlignment="center" />








    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>